# alphaalge

./: .replit  README.md  app.py  pyproject.toml
static/: script.js  style.css
templates/: algen.html  index.html
